# rust_auth_flow

./: Cargo.toml  README.md
actix/src/: main.rs
actix/templates/: index.html
rocket/: Cargo.toml
rocket/src/: main.rs
src/: main.rs
templates/: index.html  login.html
